# abap2md

./: .gitignore  CHANGELOG.md  README.md
client/: CMakeLists.txt  doxy.config  z_abap2md_generate_multi.c  z_abap2md_generate_single.c
client/Linux/: SIGNATURE.SMF
client/Linux/nwrfcsdk/demo/: ThroughputSample.c  companyClient.c  readme.txt  rfcexec.cpp  sapnwrfc.ini  serverAuthentication.c  sflightClient.c
client/Linux/nwrfcsdk/doc/: licenses.txt  release_notes.txt
client/Linux/nwrfcsdk/include/: sapdecf.h  sapnwrfc.h
client/Windows/: SIGNATURE.SMF
client/Windows/nwrfcsdk/demo/: ThroughputSample.c  companyClient.c  readme.txt  rfcexec.cpp  rfcexec.h  sapnwrfc.ini  serverAuthentication.c  sflightClient.c  sso2sample.c  startrfc.cpp  startrfc.h  stfcDeepTableServer.c
client/Windows/nwrfcsdk/doc/: licenses.txt  release_notes.txt
client/Windows/nwrfcsdk/include/: sapdecf.h  sapnwrfc.h  sapucrfc.h
client/Windows/nwrfcsdk/lib/: libsapucum.lib  sapnwrfc.lib
client/cmake/modules/: Findsapnwrfc.cmake
client/doc/latex/: refman.tex
doc/: error.md  grid.md  main.md  pandoc.md
docker/: Dockerfile  diagram-generator.lua  docker-build  docker-run  read_documentation  sapnwrfc.conf  zr_abap2md_html.prog.abap
src/: package.devc.xml  zabap2md.acid.xml  zabap2md.msag.xml  zabap2md.tran.xml  zabap2md_api.fugr.lzabap2md_apitop.abap  zabap2md_api.fugr.lzabap2md_apitop.xml  zabap2md_api.fugr.saplzabap2md_api.abap  zabap2md_api.fugr.saplzabap2md_api.xml  zabap2md_api.fugr.xml  zabap2md_api.fugr.z_abap2md_generate_doc_struct.abap  zabap2md_change.tabl.xml  (+129 more)
(+1 files in other folders)
